--- a/package.json
+++ b/package.json
@@ -53,5 +53,6 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "globals": "^15.8.0",
     "typescript": "^5.5.3"
-  }
+  },
+  "packageManager": "yarn@4.3.1"
 }
