--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --ext .js,.jsx",
-    "lint:fix": "eslint . --ext .js,.jsx --fix"
+    "lint:fix": "eslint . --ext .js,.jsx --fix",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:storybook/recommended"
     ]
   },
   "browserslist": {
@@ -42,10 +45,19 @@
     ]
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "1.6.1",
     "@emotion/babel-plugin": "^11.12.0",
     "@emotion/babel-preset-css-prop": "^11.12.0",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.7.0",
+    "@storybook/addon-essentials": "^8.2.5",
+    "@storybook/addon-interactions": "^8.2.5",
+    "@storybook/addon-links": "^8.2.5",
+    "@storybook/addon-onboarding": "^8.2.5",
+    "@storybook/blocks": "^8.2.5",
+    "@storybook/nextjs": "^8.2.5",
+    "@storybook/react": "^8.2.5",
+    "@storybook/test": "^8.2.5",
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.3",
     "eslint": "^8.57.0",
@@ -57,8 +69,12 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.4",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-storybook": "^0.8.0",
     "globals": "^15.8.0",
-    "typescript": "^5.5.3"
+    "storybook": "^8.2.5",
+    "typescript": "^5.5.3",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
   },
   "packageManager": "yarn@4.3.1"
 }
