--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.8",
     "json-server": "^1.0.0-beta.1",
     "next": "^14.2.5",
+    "nodemailer": "^6.9.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recoil": "^0.7.7",
@@ -61,6 +62,7 @@
     "@storybook/react": "^8.2.5",
     "@storybook/test": "^8.2.5",
     "@types/node": "^20.14.11",
+    "@types/nodemailer": "^6",
     "@types/react": "^18.3.3",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
