--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,10 @@
 {
+  "printWidth": 120,
+  "useTabs": false,
+  "tabWidth": 2,
+  "endOfLine": "auto",
+  "bracketSpacing": true,
   "singleQuote": true,
   "semi": true,
-  "tabWidth": 2,
-  "useTabs": false
+  "trailingComma": "all"
 }
